--- a/blog-post.html
+++ b/blog-post.html
@@ -11,27 +11,49 @@
 <body>
   <div class="container">
     <div class="header">
-     <h1>My Blog</h1>
+      <h1>My Blog</h1>
 
     </div>
-      <div class="navbar">
-        <ul class="navbar">
-          <li><a href="index.html">Home</a></li>
-            <li><a href="blog-post.html">About the Author</a></li>
-        </ul>
+    <div class="navbar">
+      <ul class="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog-post.html">About the Author</a></li>
+      </ul>
+    </div>
+    <article>
+      <div class="content">
+        <header>
+          <h2>About Me</h2>
+        </header>
+
+        <section>
+          <div class="info three">
+            <img src="marcus.JPG" />
+            <ul>
+              <li>Name: Marcus Tisdale</li>
+              <li>Hometown: Oakland</a></li>
+              <li>Current School: Arizona State University</li>
+              <li>Favorite Icecream: Bubble Gum</li>
+            </ul>
+
+            <p><span class="social"><img src="facebook.png" /><img src="linkedin.png" /><img src="twitter.png" /></span></p>
+          </div>
+          <p>Hi! I'm currently (or atleast at the time of this writing) am a student at both Udacity and ASU. I love beaches, bubble gum ice cream and
+            solving interesting problems. I reside in California and you are on my very first Github project! Feel special yet? </p>
+
+        </section>
+
+
       </div>
-    <div class="content">
-     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-       voluptatum deleniti atque corrupti quos a......</p>
-
-    </div>
-
-    <div class="footer">
-      <p> Made with 💕 by Marcus Tisdale</p>
-    </div>
-
+    </article>
+    <footer>
+      <div class="footer">
+        <p> Made with 💕 by Marcus Tisdale</p>
+      </div>
+    </footer>
   </div>
 
 </body>
 
 </html>
++
