--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
           </ul>
 
         </div>
+         </div>
 
+      <article>I've created a simple, minimalist blog design that incorporates profile photos,
+        borders, buttons, gradient background, flex and grid layouts and is also responsive. Check out my "About me" page.</article>
 
-      </div>
-      <article>I've created a simple, minimalist blog design that incorporates rounded profile photos,
-        borders, colorful buttons, flex and grid layouts and is also responsive. Check out my "About me" page.</article>
-
-      <button class="button_red" role="button"><a href="blog-post.html"><span class="button_red">Find Out More</span></a></button>
+    <button class="button-80" role="button">Find Out More</button>
     </div>
 
 
