--- a/blog-post.html
+++ b/blog-post.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="container">
+
     <div class="header">
       <h1>My Blog</h1>
 
@@ -20,7 +21,7 @@
         <li><a href="blog-post.html">About the Author</a></li>
       </ul>
     </div>
-    <article>
+
       <div class="content">
         <header>
           <h2>About Me</h2>
@@ -35,17 +36,17 @@
               <li>Current School: Arizona State University</li>
               <li>Favorite Icecream: Bubble Gum</li>
             </ul>
-
+            <span class="line"><p>That's me</p></span>
             <p><span class="social"><img src="facebook.png" /><img src="linkedin.png" /><img src="twitter.png" /></span></p>
           </div>
-          <p>Hi! I'm currently (or atleast at the time of this writing) am a student at both Udacity and ASU. I love beaches, bubble gum ice cream and
-            solving interesting problems. I reside in California and you are on my very first Github project! Feel special yet? </p>
-
+          <article>
+            <blockquote>"I love bubblegum ice cream!"</blockquote>
+          </article>
         </section>
 
 
       </div>
-    </article>
+
     <footer>
       <div class="footer">
         <p> Made with 💕 by Marcus Tisdale</p>
