--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
           </ul>
 
         </div>
-         </div>
+      </div>
 
-      <article>I've created a simple, minimalist blog design that incorporates profile photos,
-        borders, buttons, gradient background, flex and grid layouts and is also responsive. Check out my "About me" page.</article>
+      <article>
+        I've created a simple, minimalist blog design that incorporates profile photos,
+        borders, buttons, gradient background, flex and grid layouts and is also responsive. Check out my "About me" page.
+      </article>
 
-    <button class="button-80" role="button">Find Out More</button>
+      <button class="button-80" role="button">Find Out More</button>
     </div>
 
 
