--- a/blog-post.html
+++ b/blog-post.html
@@ -22,30 +22,34 @@
       </ul>
     </div>
 
-      <div class="content">
-        <header>
-          <h2>About Me</h2>
-        </header>
+    <div class="content">
+      <header>
+        <h2>About Me</h2>
+      </header>
 
-        <section>
-          <div class="info three">
-            <img src="marcus.JPG" />
-            <ul>
-              <li>Name: Marcus Tisdale</li>
-              <li>Hometown: Oakland</a></li>
-              <li>Current School: Arizona State University</li>
-              <li>Favorite Icecream: Bubble Gum</li>
-            </ul>
-            <span class="line"><p>That's me</p></span>
-            <p><span class="social"><img src="facebook.png" /><img src="linkedin.png" /><img src="twitter.png" /></span></p>
-          </div>
-          <article>
-            <blockquote>"I love bubblegum ice cream!"</blockquote>
-          </article>
-        </section>
+      <section>
+        <div class="info three">
+          <img src="marcus.JPG" />
+          <ul>
+            <li>Name: Marcus Tisdale</li>
+            <li>Hometown: Oakland</a></li>
+            <li>Current School: Arizona State University</li>
+            <li>Favorite Icecream: Bubble Gum</li>
+          </ul>
+          <span class="line">
+            <p>That's me</p>
+          </span>
+          <p><span class="social"><img src="facebook.png" /><img src="linkedin.png" /><img src="twitter.png" /></span></p>
+        </div>
+        <article>
+          <blockquote>
+            <h3>"I love bubblegum ice cream!"</h3>
+          </blockquote>
+        </article>
+      </section>
 
 
-      </div>
+    </div>
 
     <footer>
       <div class="footer">
