--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         borders, buttons, gradient background, flex and grid layouts and is also responsive. Check out my "About me" page.
       </article>
 
-      <button class="button-80" role="button">Find Out More</button>
+      <button class="button-80" role="button"><a href="blog-post.html">Find Out More<a /></button>
     </div>
 
 
