--- a/blog-post.html
+++ b/blog-post.html
@@ -29,16 +29,16 @@
 
       <section>
         <div class="info three">
+
           <img src="marcus.JPG" />
+
           <ul>
             <li>Name: Marcus Tisdale</li>
-            <li>Hometown: Oakland</a></li>
+            <li>Hometown: Oakland</li>
             <li>Current School: Arizona State University</li>
             <li>Favorite Icecream: Bubble Gum</li>
           </ul>
-          <span class="line">
-            <p>That's me</p>
-          </span>
+           <span class="line"><p>That's me!</p></span>
           <p><span class="social"><img src="facebook.png" /><img src="linkedin.png" /><img src="twitter.png" /></span></p>
         </div>
         <article>
