--- a/blog-post.html
+++ b/blog-post.html
@@ -30,7 +30,7 @@
       <section>
         <div class="info three">
 
-          <img src="marcus.JPG" />
+          <img src="assets/marcus.JPG" />
 
           <ul>
             <li>Name: Marcus Tisdale</li>
@@ -39,7 +39,7 @@
             <li>Favorite Icecream: Bubble Gum</li>
           </ul>
            <span class="line"><p>That's me!</p></span>
-          <p><span class="social"><img src="facebook.png" /><img src="linkedin.png" /><img src="twitter.png" /></span></p>
+          <p><span class="social"><img src="assets/facebook.png" /><img src="assets/linkedin.png" /><img src="assets/twitter.png" /></span></p>
         </div>
         <article>
           <blockquote>
@@ -61,4 +61,3 @@
 </body>
 
 </html>
-+
