--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="content">
       <div class="nestedCard">
 
-        <div id="one" class="authorbox"><img src="marcus.JPG" /></div>
+        <div id="one" class="authorbox"><img src="assets/marcus.JPG" /></div>
         <div id="two" class="authorbox">
           <ul>
             <li><span class="title"><a href="blog-post.html">About the Author<a /></span></li>
