--- a/blog-post.html
+++ b/blog-post.html
@@ -30,7 +30,7 @@
       <section>
         <div class="info three">
 
-          <img src="assets/marcus.JPG" />
+          <span class="thatsme"><img src="assets/marcus.JPG"/><p>That's me!</p></span>
 
           <ul>
             <li>Name: Marcus Tisdale</li>
@@ -38,7 +38,7 @@
             <li>Current School: Arizona State University</li>
             <li>Favorite Icecream: Bubble Gum</li>
           </ul>
-           <span class="line"><p>That's me!</p></span>
+        
           <p><span class="social"><img src="assets/facebook.png" /><img src="assets/linkedin.png" /><img src="assets/twitter.png" /></span></p>
         </div>
         <article>
