--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Blog</title>
-  <link rel="stylesheet" type="text/css" title="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" title="stylesheet" href="css/import.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <div class="content">
       <div class="nestedCard">
 
-        <div id="one" class="authorbox"><img src="assets/marcus.JPG" /></div>
+        <div id="one" class="authorbox"><img src="assets/marcus.JPG" alt="That's me!" /></div>
         <div id="two" class="authorbox">
           <ul>
             <li><span class="title"><a href="blog-post.html">About the Author<a /></span></li>
@@ -34,8 +34,8 @@
       </div>
 
       <article>
-        I've created a simple, minimalist blog design that incorporates profile photos,
-        borders, buttons, gradient background, flex and grid layouts and is also responsive. Check out my "About me" page.
+      <p>I've created a <b>simple, minimalist blog design</b> that <u>incorporates profile photos,
+        borders, buttons, gradient background, flex and grid layouts and is also responsive</u>. <em>Check out my "About me" page.</em></p>
       </article>
 
       <button class="button-80" role="button"><a href="blog-post.html">Find Out More<a /></button>
