--- a/blog-post.html
+++ b/blog-post.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Blog</title>
-  <link rel="stylesheet" type="text/css" title="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" title="stylesheet" href="css/import.css">
 </head>
 
 <body>
@@ -27,10 +27,10 @@
         <h2>About Me</h2>
       </header>
 
-      <section>
+      <section class="column">
         <div class="info three">
 
-          <span class="thatsme"><img src="assets/marcus.JPG"/><p>That's me!</p></span>
+          <span class="image_caption"><img src="assets/marcus.JPG"/><p>That's me!</p></span>
 
           <ul>
             <li>Name: Marcus Tisdale</li>
@@ -38,8 +38,8 @@
             <li>Current School: Arizona State University</li>
             <li>Favorite Icecream: Bubble Gum</li>
           </ul>
-        
-          <p><span class="social"><img src="assets/facebook.png" /><img src="assets/linkedin.png" /><img src="assets/twitter.png" /></span></p>
+
+          <p><span class="social"><img src="assets/facebook.png" alt="facebook" /><img src="assets/linkedin.png" alt="linkedin" /><img src="assets/twitter.png" alt="twitter" /></span></p>
         </div>
         <article>
           <blockquote>
