--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </div>
 
       <article>
-      <p>I've created a <b>simple, minimalist blog design</b> that <u>incorporates profile photos,
-        borders, buttons, gradient background, flex and grid layouts and is also responsive</u>. <em>Check out my "About me" page.</em></p>
+    <blockquote>  <p>I've created a <b>simple, minimalist blog design</b> that <u>incorporates profile photos,
+        borders, buttons, gradient background, flex and grid layouts and is also responsive</u>. <em>Check out my "About me" page.</em></p></blockquote>
       </article>
 
       <button class="button-80" role="button"><a href="blog-post.html">Find Out More<a /></button>
