--- a/blog-post.html
+++ b/blog-post.html
@@ -53,7 +53,7 @@
 
     <footer>
       <div class="footer">
-        <p> Made with 💕 by Marcus Tisdale</p>
+        <h3> Made with 💕 by Marcus Tisdale</h3>
       </div>
     </footer>
   </div>
