--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <div class="footer">
-      <p> Made with 💕 by Marcus Tisdale</p>
+      <h3> Made with 💕 by Marcus Tisdale</h3>
     </div>
 
   </div>
