--- a/blog-post.html
+++ b/blog-post.html
@@ -12,7 +12,7 @@
   <div class="container">
 
     <div class="header">
-      <h1>My Blog</h1>
+      <h2>My Blog</h2>
 
     </div>
     <div class="navbar">
@@ -30,7 +30,9 @@
       <section class="column">
         <div class="info three">
 
-          <span class="image_caption"><img src="assets/marcus.JPG"/><p>That's me!</p></span>
+          <span class="image_caption"><img src="assets/marcus.JPG" />
+            <p>That's me!</p>
+          </span>
 
           <ul>
             <li>Name: Marcus Tisdale</li>
