--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <h1>My Blog</h1>
+      <h2>My Blog</h2>
 
     </div>
     <div class="navbar">
@@ -34,19 +34,21 @@
       </div>
 
       <article>
-    <blockquote>  <p>I've created a <b>simple, minimalist blog design</b> that <u>incorporates profile photos,
-        borders, buttons, gradient background, flex and grid layouts and is also responsive</u>. <em>Check out my "About me" page.</em></p></blockquote>
+        <blockquote>
+          <p>I've created a <b>simple, minimalist blog design</b> that <u>incorporates profile photos,
+              borders, buttons, gradient background, flex and grid layouts and is also responsive</u>. <em>Check out my "About me" page.</em></p>
+        </blockquote>
       </article>
 
       <button class="button-80" role="button"><a href="blog-post.html">Find Out More<a /></button>
     </div>
 
 
-
+<footer>
     <div class="footer">
       <h3> Made with 💕 by Marcus Tisdale</h3>
     </div>
-
+</footer>
   </div>
 
 </body>
